--- a/auto-pr-tag-release-action/action.yaml
+++ b/auto-pr-tag-release-action/action.yaml
@@ -19,7 +19,9 @@ inputs:
   commands:
     description: "The commands to run"
     required: true
-
+  post_commands:
+    description: "The post commands to run"
+    required: false
 runs:
   using: composite
   steps:
@@ -55,20 +57,47 @@ runs:
       shell: bash
       run: go install github.com/golang/mock/mockgen@v1.6.0
 
-    - name: Execute command
+    - name: Check if branch exists
+      shell: bash
+      id: checkbranch
+      run: |
+        if git show-ref --verify --quiet refs/remotes/origin/${{ env.RELEASE_BRANCH_NAME }}; then
+          echo "BRANCH_EXISTS=true" >> $GITHUB_ENV
+        else
+          echo "BRANCH_EXISTS=false" >> $GITHUB_ENV
+        fi
+
+    - name: Create branch if not exists
+      shell: bash
+      if: env.BRANCH_EXISTS == 'false'
+      run: |
+        git checkout -b ${{ env.RELEASE_BRANCH_NAME }}
+        git push origin ${{ env.RELEASE_BRANCH_NAME }}
+
+    - name: Execute commands
       shell: bash
       working-directory: ./remote_repo
       env:
         TELEPRESENCE_VERSION: ${{ inputs.telepresence_version }}
       run: |
         ${{ inputs.commands }}
+        git push origin HEAD:${{ env.RELEASE_BRANCH_NAME }}
 
-    - name: Create pull request
-      uses: peter-evans/create-pull-request@v5.0.1
-      with:
-        path: ./remote_repo
-        title: "Telepresence ${{ env.RELEASE_BRANCH_NAME }}"
-        base: main
-        branch: ${{ env.RELEASE_BRANCH_NAME }}
-        token: ${{ inputs.GH_AUTO_RELEASE_TOKEN }}
-        body: "New telepresence release"
+    - name: Execute post commands
+      if: ${{ inputs.post_commands }}
+      shell: bash
+      working-directory: ./remote_repo
+      env:
+        TELEPRESENCE_VERSION: ${{ inputs.telepresence_version }}
+      run: |
+        ${{ inputs.post_commands }} 
+
+#    - name: Create pull request
+#      uses: peter-evans/create-pull-request@v5.0.1
+#      with:
+#        path: ./remote_repo
+#        title: "Telepresence ${{ env.RELEASE_BRANCH_NAME }}"
+#        base: main
+#        branch: ${{ env.RELEASE_BRANCH_NAME }}
+#        token: ${{ inputs.GH_AUTO_RELEASE_TOKEN }}
+#        body: "New telepresence release"
