--- a/check-commit/action.yaml
+++ b/check-commit/action.yaml
@@ -37,24 +37,19 @@ runs:
             if [[ "$commit_subject" =~ ^Prepare\ (v[0-9]+\.[0-9]+\.[0-9]+(-rc\.[0-9]+)?)$ ]]; then
               version=${BASH_REMATCH[1]}
         
-              # Check if the tag for this version already exists
-              if ! git rev-parse "$version" >& /dev/null; then
-                echo "Match found and tag does not exist for: $version"
-                echo "telepresence_version=$version" >> $GITHUB_OUTPUT
-        
-              else
-                echo "Match found but a tag already exists for: $version"
-                if [[ "$version" =~ -rc\.([0-9]+)$ ]]; then
-                  RC_NUM=${BASH_REMATCH[1]}
-                  NEXT_RC_NUM=$((RC_NUM+1))
-                  NEXT_TAG="v${current_version}-rc.$NEXT_RC_NUM"
-                  echo "telepresence_version=$NEXT_TAG" >> $GITHUB_OUTPUT
-                fi
-        
+              if [[ "$version" =~ -rc\.([0-9]+)$ ]]; then
+                RC_NUM=${BASH_REMATCH[1]}
+                NEXT_RC_NUM=$((RC_NUM+1))
+                NEXT_TAG="v${current_version}-rc.$NEXT_RC_NUM"
+                echo "telepresence_version=$NEXT_TAG" >> $GITHUB_OUTPUT
+                echo "The next telepresence version is: $NEXT_TAG"
               fi
+      
             fi
           else
             echo "No match found."
-            echo "telepresence_version=v${current_version}-rc.0" >> $GITHUB_OUTPUT
+            NEXT_TAG="v${current_version}-rc.0"
+            echo "telepresence_version=$NEXT_TAG" >> $GITHUB_OUTPUT
+            echo "The next telepresence version is: $NEXT_TAG"
           fi
         fi
