--- a/execute-release-commands/action.yaml
+++ b/execute-release-commands/action.yaml
@@ -16,11 +16,11 @@ inputs:
   repository:
     description: "The repository to upgrade"
     required: true
-  commands:
-    description: "The commands to run"
+  pre_push_branch_commands:
+    description: "The commands to run before pushing to the branch"
     required: true
-  post_commands:
-    description: "The post commands to run"
+  post_push_branch_commands:
+    description: "The post commands to run after pushing to the branch"
     required: false
 runs:
   using: composite
@@ -89,11 +89,11 @@ runs:
       env:
         TELEPRESENCE_VERSION: ${{ inputs.telepresence_version }}
       run: |
-        ${{ inputs.commands }}
+        ${{ inputs.pre_push_branch_commands }}
         git push origin HEAD:${{ env.RELEASE_BRANCH_NAME }}
 
     - name: Execute post commands
-      if: ${{ inputs.post_commands }}
+      if: ${{ inputs.post_push_branch_commands }}
       shell: bash
       working-directory: ./remote_repo
       env:
@@ -101,12 +101,4 @@ runs:
       run: |
         ${{ inputs.post_commands }} 
 
-#    - name: Create pull request
-#      uses: peter-evans/create-pull-request@v5.0.1
-#      with:
-#        path: ./remote_repo
-#        title: "Telepresence ${{ env.RELEASE_BRANCH_NAME }}"
-#        base: main
-#        branch: ${{ env.RELEASE_BRANCH_NAME }}
-#        token: ${{ inputs.GH_AUTO_RELEASE_TOKEN }}
-#        body: "New telepresence release"
+
